--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,3 +1,6 @@
+Header set Access-Control-Allow-Origin '*'
+Header set Access-Control-Allow-Methods 'GET, PUT, POST, DELETE, OPTIONS'
+Header set Access-Control-Allow-Headers "Content-Type, Authorization"
 RewriteEngine On
 RewriteBase /API
 options +FollowSymLinks
